--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -27,9 +27,9 @@ $brand-danger:          #FF4136 !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #e6ffff !default;
+$body-bg:               #dcffdc !default;
 //** Global text color on `<body>`.
-$text-color:            $gray !default;
+$text-color:            #000000 !default;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
