--- a/_sass/bootstrap/_variables.scss
+++ b/_sass/bootstrap/_variables.scss
@@ -27,7 +27,7 @@ $brand-danger:          #FF4136 !default;
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-$body-bg:               #dcffdc !default;
+$body-bg:               #f0fff0 !default;
 //** Global text color on `<body>`.
 $text-color:            #000000 !default;
 
