--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,15 +8,15 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Allan Lab @ Leiden &rarr; University of Munich (LMU)</a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Ling Lab <b>L</b>ight-<b>M</b>aterials <b>I</b>nteractions for <b>S</b>emiconducting Applications </a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
 		<li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Team</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Opportunities</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
 		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li> -->
 	  </ul>
 	</div>
