--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Ling Lab <b>L</b>ight-<b>M</b>aterials <b>I</b>nteractions for <b>S</b>emiconducting Applications </a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Ling Lab <br> <b>L</b>ight-<b>M</b>aterials <b>I</b>nteractions for <b>S</b>emiconducting Applications </a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
