--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Ling Lab (L-MIS) @ University of Central Florida </a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/"><b>Ling Lab (L-MIS) @ University of Central Florida</b> </a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
