--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -4,6 +4,7 @@ layout: default
 
   <div id="homeid" class="col-sm-8">
         <h1>Welcome to the Ling Lab</h1>
+	  <h2><b>L</b>ight-<b>M</b>aterials <b>I</b>nteractions for <b>S</b>emiconducting Applications</h2>
 
 	{{ content }}
   </div>
