--- a/_sass/bootstrap/_type.scss
+++ b/_sass/bootstrap/_type.scss
@@ -61,7 +61,7 @@ p {
 
 .lead {
   margin-bottom: $line-height-computed;
-  font-size: floor(($font-size-base * 1.15));
+  font-size: floor(($font-size-large * 1.1));
   font-weight: 420;
   line-height: 1.5;
 
